[gd_scene load_steps=6 format=3 uid="uid://cdh1c0yenr2w4"]

[ext_resource type="Script" path="res://scenes/game/popout_element.gd" id="1_hpmv6"]
[ext_resource type="Texture2D" uid="uid://dh6ntvtll3ni" path="res://assets/icons/minus.png" id="1_tf732"]
[ext_resource type="Texture2D" uid="uid://dogldee47qjtf" path="res://assets/highlights/arena_border_highlight_selected.png" id="2_hgm7i"]
[ext_resource type="Texture2D" uid="uid://l1rbxm47rsmf" path="res://assets/highlights/arena_border_highlight_pressed.png" id="3_jcvpf"]
[ext_resource type="Texture2D" uid="uid://dd7gab67xwbjc" path="res://assets/icons/plus.png" id="4_sdq12"]

[node name="PopoutElement" type="PanelContainer"]
script = ExtResource("1_hpmv6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CardControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MinusControl" type="PanelContainer" parent="MarginContainer/VBoxContainer/CardControls"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CardControls/MinusControl"]
layout_mode = 2
texture = ExtResource("1_tf732")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CardControls/MinusControl"]
layout_mode = 2
texture_normal = ExtResource("2_hgm7i")
texture_pressed = ExtResource("3_jcvpf")
texture_hover = ExtResource("2_hgm7i")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CardControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlusControl" type="PanelContainer" parent="MarginContainer/VBoxContainer/CardControls"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CardControls/PlusControl"]
layout_mode = 2
texture = ExtResource("4_sdq12")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CardControls/PlusControl"]
layout_mode = 2
texture_normal = ExtResource("2_hgm7i")
texture_pressed = ExtResource("3_jcvpf")
texture_hover = ExtResource("2_hgm7i")
ignore_texture_size = true
stretch_mode = 0

[node name="CardPlaceholder" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardParent" type="Node2D" parent="."]
